# mozilla-vpn-client

./: CMakeLists.txt  env.yml  package-lock.json  package.json
.github/workflows/: gh_pages.yaml  wasm.yaml
android/: build.gradle
android/daemon/src/main/java/org/mozilla/firefox/vpn/daemon/: VPNService.kt
android/vpnClient/: build.gradle
android/vpnClient/src/main/java/org/mozilla/firefox/vpn/qt/: QtAutofillHelper.kt  VPNActivity.java  VPNAuthAutofillView.kt  VPNVersionAPI.kt
extension/: dev.py
extension/loophole/: CMakeLists.txt  go.mod  go.sum  loophole.go  natives_darwin.go  natives_windows.go
glean/: metrics.yaml
linux/flatpak/: flatpak-vpn-crates.json
nebula/ui/components/: MZDropShadowWithStates.qml
nebula/ui/resources/fonts/: conv.py
nebula/ui/themes/main/: colors.js
qtglean/: Cargo.toml
scripts/android/: cmake.sh
scripts/linux/: conda_trim.sh
scripts/utils/: import_languages.py  qt6_compile.sh
src/: CMakeLists.txt  connectionmanager.cpp  connectionmanager.h  controller.cpp  loopholeadapter.cpp  loopholeadapter.h  src.pro  telemetry.cpp  webextensionadapter.cpp  wgprobe.cpp  wgprobe.h
src/apps/unit_tests/: CMakeLists.txt  testtasksentry.cpp
src/apps/vpn/: mozillavpn.cpp
src/apps/vpn/authenticationinapp/: authenticationinapp.cpp  authenticationinapp.h
src/apps/vpn/cmake/: android.cmake
src/apps/vpn/commands/: commandui.cpp
src/apps/vpn/ui/: ui.qrc
src/apps/vpn/ui/screens/getHelp/developerMenu/: ViewDeveloperMenu.qml  ViewProfiler.qml
src/cmake/: linux.cmake  sources.cmake  windows.cmake
src/commands/: commandstatus.cpp  commandui.cpp
src/extension/: extensionconnection.cpp  extensionconnection.h  extensionhandler.cpp  extensionhandler.h
src/qmake/: probe.pri  signature.pri
src/shared/: sources.cmake
src/shared/profiler/: CMakeLists.txt  profiler.cpp  profiler.h  profilerworker.cpp  profilerworker.h
src/shared/sentry/: CMakeLists.txt  sentryadapter.cpp  sentryadapter.h  sentrywatchdog.cpp  sentrywatchdog.h
src/shared/sentry/tests/unit/: CMakeLists.txt  test_watchdog.cc
src/tasks/controlleraction/: taskcontrolleraction.cpp  taskcontrolleraction.h
src/telemetry/: metrics.yaml
src/ui/screens/home/: ViewHome.qml
src/ui/screens/home/controller/: ControllerImage.qml  ControllerView.qml  VPNToggle.qml
taskcluster/docker/base/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/toolchain/: conda_linux.yml  kind.yml
tests/qml/: CMakeLists.txt
tests/unit/: CMakeLists.txt
windows/installer/: MozillaVPN_cmake.wxs  MozillaVPN_prod.wxs
